# the-elder-scrobz

./: .env  .gitattributes  .gitignore  .sqruff  Cargo.toml  Cross.toml  Dockerfile  README.md  cog.toml  config.toml  docker-compose.yaml  entrypoint.sh  justfile
.sqlx/: query-03a10f66b3a4cedee9f973ba6ad7764d9f26a906aa415d376ee7a7404d919bc4.json  query-046aa8679e48a9b806d2965d240b66eaf1767d2d5d433c8773f9f93ec3990f48.json  query-04bd09309ce1ee4fdd9d84c7bbd3cf81ff7cdbfbc737f41f281f403460a8dcf4.json  query-04f73c6ec4e87e6d0d3e3288e37cb5b07134b512bf55d6c8c883cb69ce458802.json  query-04f8ef7ffd4c80960b73aa122744caf8d41af6fd64cb199db05243f9edfe4804.json  query-05194b782b100777ffce90445001e781170a0b8d87f3aeb75c2921fe095f8369.json  query-05b5765bd2d8904526b5b2b1312b07005bb0831ee51089018e2a708b989b468e.json  query-0616515ff1885c25792999165d80db5742e05ac1702ae0c2535c3547f480ec74.json  query-062228b44e9be81ca6fd08b48866bfc4bbbd97d93f274970844d072bb3eb9b2f.json  query-0637d987f4dc7682b1f261c9072025f1a25a7a1f476a4b85f5bcab69700e2947.json  query-0646fc083d3405ac3fd92e83f2d4d6638bcdb9c8e8c5659afb63b2ceb69e2c2a.json  query-081ddd2448e7f929a63775499a91f7e9198c0586cf300a849afc904007c12702.json  query-08640eb3d7d988768f215584bd1ca722b3c8112276804cda74e81092c25e98e2.json  query-09992ed0efa48ecd7e1a4e854b0760ad207f4a98540519e8a8f7e336a36853c0.json  query-09cb40106fb51d84eb01abb3335ad823bb4bfb952d696df96ccef390492b5df1.json  query-0a8400dad1f761d0cc4732dd27281b233c7ddb0d35448d5195bcacd4a23e62e3.json  query-0adf511e0cb9a9d16e4afb052bb673a979e05351fb10764270c5cd116c45cd5f.json  query-0b1a54a7f9f27e3f77e0de50fbafc6759dbc8caf1b6a4cb942a3b1f32fcab2c6.json  query-0eeed1eb23b6e79d0c95a0c57ad9a6d051887019dd85ec5e99b2be5eaceaa3e3.json  query-0f5764576ee71486f1e5cc0dffedc078b9f008d494e7b7b86914a17882bde682.json  query-0f5aae93a0647a890228604a9e245fb2a0610a0ce53b3519e054e40207b7a819.json  query-1021db3a44c312238e2f2e93ad6f93a1c6e0d4d68aadc60f0ae5702c59fa488b.json  query-104187eb1e582f45f73994e77a72774088fd6ee91d378a52c15cf61e7f6dd63d.json  query-105db0442241a0ca791b0f219c8855a82eb95e030235bd28ffe7ea64d817975a.json  query-10f7533df02406dda1ed186496f5d14f79d9ef41e1adb5a9faf972ab6f525df6.json  query-111935550b30d1961d3a6b3b3e0c50ec19073446d4f6fa47b809932bd755c93a.json  (+396 more)
.zed/: settings.json  tasks.json
assets/: init_mock.sh  (+2 more)
crates/elder-scrobz/: Cargo.toml
crates/elder-scrobz-api/: Cargo.toml
crates/elder-scrobz-api/src/: error.rs  event_manager.rs  lib.rs  main.rs  oauth.rs  settings.rs  state.rs  test_helper.rs
crates/elder-scrobz-api/src/api/: api_key.rs  charts.rs  events.rs  imports.rs  listens.rs  mod.rs  pagination.rs  pulse.rs  user.rs
crates/elder-scrobz-api/src/api/admin/: config.rs  mod.rs  releases.rs  scan.rs  scrobbles.rs  stats.rs
crates/elder-scrobz-api/src/api/albums/: mod.rs
crates/elder-scrobz-api/src/api/artists/: mod.rs
crates/elder-scrobz-api/src/api/charts/: albums.rs  artists.rs  mod.rs  overview.rs  pulses.rs  tracks.rs
crates/elder-scrobz-api/src/api/listenbrainz/: api_key.rs  listens.rs  mod.rs
crates/elder-scrobz-api/src/api/tracks/: mod.rs
crates/elder-scrobz-api/src/api/users/: config.rs  exports.rs  imports.rs  mod.rs
crates/elder-scrobz-api/src/oauth/: client.rs  mod.rs  router.rs  user.rs
crates/elder-scrobz-api/tests/fixtures/: musicbrainz-export.jsonl  scrobble.json  scrobble2.json
crates/elder-scrobz-crawler/: Cargo.toml
crates/elder-scrobz-crawler/src/: artists.rs  coverart.rs  lib.rs  releases.rs
crates/elder-scrobz-crawler/src/metadata/: discogs.rs  mod.rs  wiki.rs
crates/elder-scrobz-db/: Cargo.toml
crates/elder-scrobz-db/docs/: album_charts.example.json  artist_charts.example.json  submitlisten.example.json  track_charts.example.json
crates/elder-scrobz-db/migrations/: 20250322182620_init.sql  20250326083258_remove_user_id.sql  20250326090716_scrobble_insert_trigger.sql  20250326125313_add_scrobble_process_state.sql  20250328135409_on_coverart_updated_trigger.sql  20250401093220_on_release_inserted_trigger.sql  20250402114707_add_id_on_api_keys.sql  20250402115644_make_api_key_created_at_non_null.sql  20250821125013_add_release_year.sql  20250824034139_drop_email.sql  20250824052317_artist_thumbnail_updated_trigger.sql  20250825091233_add_subsonic_id.sql  20250919111810_add_errored_scrobble.sql  20250919113903_add_errored_scrobble_updated_at.sql  20251117120647_add_playlist_generator_config.sql
crates/elder-scrobz-db/queries/: track_chart_month.sql  track_chart_year.sql
crates/elder-scrobz-db/queries/charts/album/: all_time.sql  month.sql  today.sql  user_all_time.sql  user_month.sql  user_today.sql  user_week.sql  user_year.sql  week.sql  year.sql
crates/elder-scrobz-db/queries/charts/artist/: all_time.sql  month.sql  today.sql  user_all_time.sql  user_month.sql  user_today.sql  user_week.sql  user_year.sql  week.sql  year.sql
crates/elder-scrobz-db/queries/charts/overview/: all_time.sql  month.sql  today.sql  user_all_time.sql  user_month.sql  user_today.sql  user_week.sql  user_year.sql  week.sql  year.sql
crates/elder-scrobz-db/queries/charts/track/: all_time.sql  month.sql  today.sql  user_all_time.sql  user_month.sql  user_today.sql  user_week.sql  user_year.sql  week.sql  year.sql
crates/elder-scrobz-db/queries/details/: album.sql
crates/elder-scrobz-db/queries/pulses/: all.sql  month.sql  today.sql  user_all.sql  user_month.sql  user_today.sql  user_week.sql  user_year.sql  week.sql  year.sql
crates/elder-scrobz-db/src/: api_key.rs  configs.rs  cover_art.rs  dlc.rs  lib.rs  pulses.rs  scrobble.rs  stats.rs  user.rs
crates/elder-scrobz-db/src/charts/: album.rs  artists.rs  mod.rs  overview.rs  tracks.rs
crates/elder-scrobz-db/src/listens/: artists.rs  mod.rs  raw.rs  recent.rs  releases.rs  scrobble.rs  tracks.rs
crates/elder-scrobz-db/src/listens/raw/: create.rs  listenbrainz.rs  mod.rs  scrobble.rs
crates/elder-scrobz-docgen/: Cargo.toml
crates/elder-scrobz-docgen/src/: main.rs
crates/elder-scrobz/src/: main.rs
crates/fake-scrobble-gen/: Cargo.toml  README.md
crates/fake-scrobble-gen/src/: main.rs
(+137 files in other folders)
