[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]

axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header", "json-lines"] }
axum-macros = "0.5.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.97"
config = "0.15.11"

uuid = { version = "^1.8", features = ["serde", "v4"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = "0.9.0"
argon2 = { version = "0.5.3" }
base64 = "0.22.1"
sha2 = "0.10.8"

elder-scrobz-db = { path = "crates/elder-scrobz-db", version = "0.1.0" }

http-body-util = "0.1.2"
tower = "0.5.2"

