[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]

axum = { version = "0.8.1" }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa = { version = "5.3.1", features = ["macros", "axum_extras", "chrono"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "json-lines"] }
axum-macros = "0.5.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs", "auth", "cors"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["native-tls-vendored"] }
futures-util = "0.3.31"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "migrate", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.97"
config = "0.15.11"

uuid = { version = "^1.8", features = ["serde", "v4"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = "0.9.0"
argon2 = { version = "0.5.3" }
base64 = "0.22.1"
sha2 = "0.10.8"

elder-scrobz-db = { path = "crates/elder-scrobz-db", version = "0.1.0" }
elder-scrobz-resolver = { path = "crates/elder-scrobz-resolver", version = "0.1.0" }

http-body-util = "0.1.2"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
speculoos = "0.12.0"
dotenv = "0.15.0"

musicbrainz_rs = "0.9.1"
once_cell = "1.21.1"