[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.1" }
axum-extra = { version = "0.10.0", features = ["typed-header", "json-lines"] }
axum-macros = "0.5.0"
axum_session = { version = "0.17.1" }
axum_session_sqlx = "0.6.0"
axum_session_auth = "0.17.0"

utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa = { version = "5.3.1", features = ["macros", "axum_extras", "chrono"] }

tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs", "auth", "cors"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
autometrics = { version = "2.0.0", features = ["prometheus-exporter"] }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.14"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-cron-scheduler = "0.15"
async-trait = "0.1.89"

reqwest = { version = "0.12.15", features = ["native-tls-vendored"] }
oauth2 = "5.0.0"
futures-util = "0.3.31"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "migrate", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.97"
config = "0.15.11"

uuid = { version = "^1.8", features = ["serde", "v4"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = "0.9.0"
argon2 = { version = "0.5.3" }
base64 = "0.22.1"
sha2 = "0.10.8"
url = "2"

elder-scrobz-api = { path = "crates/elder-scrobz-api", version = "0.1.0" }
elder-scrobz-db = { path = "crates/elder-scrobz-db", version = "0.1.0" }
elder-scrobz-crawler = { path = "crates/elder-scrobz-crawler", version = "0.1.0" }
elder-scrobz-subsonic = { path = "crates/elder-scrobz-subsonic", version = "0.1.0" }
elder-scrobz-settings = { path = "crates/elder-scrobz-settings", version = "0.1.0" }
elder-scrobz-model = { path = "crates/elder-scrobz-model", version = "0.1.0" }
elder-scrobz-playlist-generator = { path = "crates/elder-scrobz-playlist-generator", version = "0.1.0" }

http-body-util = "0.1.2"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
speculoos = "0.12.0"
dotenv = "0.15.0"

musicbrainz_rs = "0.9.1"
submarine = "0.1.1"
once_cell = "1.21.1"
