[package]
name = "elder-scrobz-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
utoipa-axum.workspace = true
utoipa.workspace = true
tokio.workspace = true
autometrics.workspace = true

axum-macros.workspace = true
elder-scrobz-db.workspace = true
elder-scrobz-crawler.workspace = true
elder-scrobz-settings.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
serde.workspace = true
futures-util.workspace = true
config.workspace = true
reqwest.workspace = true
oauth2.workspace = true

# see: https://github.com/juhaku/utoipa/issues/1341
[build-dependencies]
zip = "=2.4.2"

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
testcontainers-modules.workspace = true
speculoos.workspace = true
