[package]
name = "elder-scrobz-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
elder-scrobz-db.workspace = true
reqwest.workspace = true
musicbrainz_rs.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
sqlx.workspace = true
serde_json.workspace = true
tokio.workspace = true
wikidata.workspace = true
serde.workspace = true


[dev-dependencies]
