[package]
name = "elder-scrobz-db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
utoipa.workspace = true
argon2.workspace = true
base64.workspace = true
rand.workspace = true
password-hash.workspace = true
sha2.workspace = true